[project]
name = "rsa-algorithm"
version = "0.1.0"
description = ""
authors = [
    {name = "Joona",email = "joona.t.pasanen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "coverage (>=7.14.0,<8.0.0)"
]
